# nju-fla22-lab

./: .gitignore  README.md
trm_sim/: Cargo.toml
trm_sim/src/: lib.rs  main.rs  trm.rs
trm_sim/src/trm/: machine.rs  machine_running_error.rs  pattern.rs  state.rs  syntax_error.rs  tape.rs  transition.rs
trm_sim/tests/: test_serde_usage.rs
trm_sim_cli/: Cargo.toml
trm_sim_cli/src/: cli.rs  lib.rs  main.rs  trm_wrapper.rs
turing-programs/: trivial_trm.toml
