[package]
name = "trm_sim"
version = "0.1.0"
edition = "2021"

[features]
gui = ["egui", "eframe"]
gui_node_graph = ["egui_node_graph", "persistence", "anyhow"]
persistence = ["egui_node_graph/persistence", "eframe/persistence"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
anyhow = { version = "1.0.68", optional = true }
toml = "0.7.1"
serde_json = "1.0.91"
serde_yaml = "0.9.17"
egui = { version = "0.21.0", optional = true }
eframe = { version = "0.21.0", optional = true }
egui_node_graph = { version = "0.4.0", optional = true }