[package]
name = "trm_sim_cli"
version = "0.1.0"
edition = "2021"
authors = ["ZoukiRi"]
description = "A cross-platform CLI tool for Turing machine simulator"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
trm_sim = { path = "../trm_sim" }
